[project]
name = "tfx-pritam"
version = "0.1.0"
description = "Replicating Pritam's environment to upgrade TFX and its dependency chain to Python 3.12.4."
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    # Submodule dependencies are declared here once the corresponding submodule is initialised in libs/.
    "tfx-bsl",
    "tfx-dev",
    "setuptools==70.0.0",
]

# Local path sources for git submodules living in libs/
[tool.uv.sources]
tfx-bsl = { path = "libs/tfx-bsl", editable = true }
tfx-dev     = { path = "libs/tfx",     editable = true }
